--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "fetch-mock": "^6.3.0",
+    "redux-mock-store": "^1.5.1"
   }
 }
