--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "base-64": "^0.1.0",
     "classnames": "^2.2.5",
     "history": "^4.7.2",
+    "input-moment": "^0.4.0",
     "luxon": "^1.2.0",
+    "moment": "^2.22.1",
     "node-sass-chokidar": "^1.2.2",
     "npm-run-all": "^4.1.2",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-calendar": "^2.14.0",
     "react-date-picker": "^6.10.1",
+    "react-datetime": "^2.14.0",
     "react-datetime-picker": "^1.3.1",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
