Added and simple test for Flow static type checking

--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "flow": "flow"
   },
   "devDependencies": {
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "fetch-mock": "^6.3.0",
+    "flow-bin": "^0.71.0",
     "redux-mock-store": "^1.5.1"
   }
 }
